--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "mcp>=1.0.0",
     "httpx[http2]>=0.27.0",
     "beautifulsoup4>=4.12.0",
-    "duckduckgo-search>=6.0.0",
+    "ddgs>=8.0.0",
     "starlette>=0.37.0",
     "uvicorn>=0.27.0",
     "python-dotenv>=1.0.0",
