--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ httpx[http2]>=0.27.0
 beautifulsoup4>=4.12.0
 
 # Web search (DuckDuckGo, no API key)
-duckduckgo-search>=6.0.0
+ddgs>=8.0.0
 
 # Web framework
 starlette>=0.37.0
