--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@
 # CRAWL_MAX_LINKS_PER_PAGE=100
 # CRAWL_MAX_PAGES=20
 # CRAWL_REQUEST_TIMEOUT=30
+
+# Search (DDGS metasearch)
+# SEARCH_TIMEOUT=15
+# DDGS_PROXY=  # optional, e.g. http://user:pass@host:port
