fixed search engine issue

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,7 @@
 # CRAWL_REQUEST_TIMEOUT=30
 
 # Search (DDGS metasearch)
-# SEARCH_TIMEOUT=15
+# SEARCH_TIMEOUT=20
+# SEARCH_BACKEND_DELAY=1.0   # seconds between backend attempts (reduces rate limiting)
+# SEARCH_RATE_LIMIT_DELAY=3.0  # extra delay after 429 (seconds)
 # DDGS_PROXY=  # optional, e.g. http://user:pass@host:port
