updated scraper to work with google docs too

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
 ]
 
+[project.optional-dependencies]
+browser = ["playwright>=1.40.0"]
+
 [tool.setuptools.packages.find]
 where = ["src"]
