updated endpoint path and readme file

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@
 # CRAWL_MAX_LINKS_PER_PAGE=100
 # CRAWL_MAX_PAGES=20
 # CRAWL_REQUEST_TIMEOUT=30
-# CRAWL_USE_BROWSER_FALLBACK=true   # use Playwright when page requires JavaScript (e.g. Google Docs)
+# CRAWL_USE_BROWSER_FALLBACK=true   # use Playwright when page requires JavaScript
 # CRAWL_BROWSER_WAIT_MS=3000        # ms to wait after load for JS-rendered content
 
 # Search (DDGS metasearch)
