--- a/requirements-browser.txt
+++ b/requirements-browser.txt
@@ -1,3 +1,3 @@
-# Install after requirements.txt to enable scraping of JavaScript-rendered pages (e.g. Google Docs)
+# Install after requirements.txt to enable scraping of JavaScript-rendered pages
 # Then run: playwright install chromium
 playwright>=1.40.0
